# Employee-payroll-tracke

./: .gitignore  PRINTO.md  README.md  SPRINT1.md  SPRINT2.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
prints/: professionals.md
src/employee_payroll_tracker/: employee.py  main.py  payroll.py
tests/: test_employee.py  test_payroll.py  test_utils.py
